Fix some layout issues

--- a/public/global.css
+++ b/public/global.css
@@ -2,9 +2,9 @@ html, body {
    margin: 0px;
 } 
 
-/* .container {
-	margin: 1%;
-} */
+.terminal-nav {
+	padding: 0% 2% 0% 2%;
+}
 
 .column {
 	/* text-align: center; */
